# git-activity-monitor

./: .env.example  .gitignore  .hadolint.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-alert-discord.yml  release.yml
.serena/: project.yml
docs/: DESIGN.md  ROADMAP.md
scripts/: dependabot-merge.sh  gelfling-daily-digest.sh  list-open-alerts.sh  list-open-prs.sh
src/: __main__.py  config.py  discord_client.py  github_client.py  main.py  state.py
src/git_activity_monitor/: __init__.py  __main__.py  config.py  dependabot_alert_notify.py  discord_client.py  github_client.py  main.py  state.py
src/git_activity_monitor/monitors/: __init__.py  dependabot_alerts.py  ghcr.py  issues.py  pulls.py  releases.py  releases_pinned.py  stars.py  utils.py
src/monitors/: __init__.py  ghcr.py  issues.py  pulls.py  releases.py  stars.py  utils.py
tests/: conftest.py  test_config.py  test_dependabot_alert_notify.py  test_discord_client.py  test_github_client.py  test_state.py
tests/monitors/: test_dependabot_alerts.py  test_ghcr.py  test_issues.py  test_pulls.py  test_releases.py  test_releases_pinned.py  test_stars.py
