[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-activity-monitor"
version = "0.1.0"
description = "Polls GitHub repositories and posts activity updates to Discord."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pylint>=3.2",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
github-activity-monitor = "github_activity_monitor.main:main"

# Source files live directly in src/ (not src/github_activity_monitor/).
# package-dir maps the package name to the src/ root.
[tool.setuptools]
packages = ["github_activity_monitor", "github_activity_monitor.monitors"]
package-dir = {"github_activity_monitor" = "src", "github_activity_monitor.monitors" = "src/monitors"}

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["github_activity_monitor"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pylint.main]
# With package-dir mapping, pylint finds the package via the installed editable dist
ignore-paths = ["tests/"]

[tool.pylint.messages-control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-branches",
    "duplicate-code",
    "logging-fstring-interpolation",
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

[tool.coverage.run]
source = ["github_activity_monitor"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
